P3/test/pl0/error/error14.pl0
begin
	call 1;
end.
